# confluence_doc_insights

./: LICENSE  README.md
load/: .env_sample  .gitignore  README.md  pyproject.toml
load/src/: pipeline.py
load/src/load/: clients.py  confluence.py
load/src/tests/: conftest.py  test_clients.py  test_confluence.py  test_integration.py
load/src/tests/testdata/: cursor_response_page1.json  cursor_response_page2.json  dlt_config.json  dlt_secrets.json  pages_response_page1.json  pages_response_page2.json  spaces_response_multi_space_page1.json  spaces_response_multi_space_page2.json  spaces_response_selected_space.json  viewers_response.json
transform/: .gitignore  README.md  pyproject.toml
transform/data_transform/: dbt_project.yml  profiles.yml
transform/data_transform/macros/: get_last_load_datetime.sql
transform/data_transform/models/mart/: embedded_pages.sql  embedded_pages.yml  outdated_page_activity.sql  outdated_page_activity.yml  page_html_to_markdown.py  page_html_to_markdown.yml  recent_page_activity.sql  recent_page_activity.yml
transform/data_transform/models/sources/: _dlt_loads.yml  _dlt_pipeline_state.yml  _dlt_version.yml  pages.yml  spaces.yml  viewers.yml  views.yml
transform/data_transform/models/staging/: cleansed_loads.sql  cleansed_loads.yml  cleansed_pages.sql  cleansed_pages.yml  cleansed_spaces.sql  cleansed_spaces.yml  cleansed_viewers.sql  cleansed_viewers.yml  cleansed_views.sql  cleansed_views.yml
ui/: .gitignore  README.md  pyproject.toml
ui/src/: environment.yml  snowflake.yml
ui/src/ui/: models.py  queries.py  utils.py  welcome.py
ui/src/ui/components/: document_review_items.py  outdated_page_items.py  page_access_history_linechart.py  recent_page_items.py  sidebar.py
ui/src/ui/pages/: 1_Recent_pages.py  2_Outdated_pages.py  (+1 more)
ui/tests/data/: _dlt_loads.csv  _dlt_pipeline_state.csv  _dlt_version.csv  pages.csv  spaces.csv  viewers.csv
(+1 files in other folders)
