[project]
name = "load"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "t0momi219", email = "t.kodama@datumstudio.jp" }
]
dependencies = [
    "dlt[snowflake]>=0.5.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "requests-mock>=1.12.1",
    "dlt[duckdb]>=1.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/load"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["unit", "integration"]
